# MIT-6824

./: Cargo.toml  build.rs
labrpc/: Cargo.toml
mapreduce/: Cargo.toml  build.rs
mapreduce/data/: test.txt
mapreduce/proto/: mr.proto
mapreduce/src/: common_map.rs  common_reduce.rs  common_rpc.rs  error.rs  lib.rs  main.rs  master.rs  mrsequential.rs  mrwc.rs  utils.rs  worker.rs
src/: lib.rs  main.rs
src/kvraft/: client.rs  mod.rs
src/proto/: raft.proto
src/raft/: api.rs  error.rs  errors.rs  master.rs  mod.rs  persisener.rs  raft_proto.rs  slave.rs
