[package]
name = "mit-6824"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7.1"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.0.1"
tonic = { version = "0.1.1", features = ["tls"] }
prost = "0.6"

[build-dependencies]
tonic-build = "0.1.1"